--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -76,9 +76,10 @@
                 <input class="change__input newPwd" type="password" placeholder="영문,숫자,특수문자 조합 8~16자" maxlength="16"
                        minlength="8" required name="chgPwd">
                 <span class="hint hint2">영문, 숫자, 특수문자를 조합해서 입력해주세요. (8-16자)</span>
+                <span class="hint hint3">현재 비밀번호와 새로운 비밀번호가 같습니다.</span>
                 <div class="div__btn">
                     <button class="cancleBtn btn">취소</button>
-                    <button class="applyBtn btn">확인</button>
+                    <button class="applyBtn btn" disabled="disabled">확인</button>
                 </div>
             </div>
         </div>
@@ -121,7 +122,7 @@
                            maxlength="16">
                     <div class="div__btn">
                         <button class="phone__cancleBtn btn secession__cancle__btn">취소</button>
-                        <button class="phone__applyBtn btn secession__apply__btn">확인</button>
+                        <button class="phone__applyBtn btn secession__apply__btn" disabled="disabled">확인</button>
                     </div>
                 </div>
             </div>
